--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -24,7 +24,7 @@ jobs:
 
       # Install Poetry
       - name: Install Poetry
-        run: pip install poetry
+        run: pip install poetry==2.1.3
 
       # Cache Poetry dependencies
       - name: Cache Poetry dependencies
