--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -40,23 +40,23 @@ jobs:
         run: poetry install --only main
 
 
-#       # Log in to DockerHub
-#       - name: Log in to DockerHub
-#         uses: docker/login-action@v3
-#         with:
-#           username: ${{ secrets.DOCKERHUB_USERNAME }}
-#           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      # Log in to DockerHub
+      - name: Log in to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-#       # Build and push Docker image
-#       - name: Build and push Docker image
-#         uses: docker/build-push-action@v6
-#         with:
-#           context: .
-#           push: true
-#           tags: ${{ secrets.DOCKERHUB_USERNAME }}/my-app:${{ github.sha }}
-#           # Optionally tag with 'latest' for main branch
-#           additional-tags: |
-#             ${{ github.ref == 'refs/heads/main' && format('{0}/my-app:latest', secrets.DOCKERHUB_USERNAME) || '' }}
+      # Build and push Docker image
+      # - name: Build and push Docker image
+      #   uses: docker/build-push-action@v6
+      #   with:
+      #     context: .
+      #     push: true
+      #     tags: ${{ secrets.DOCKERHUB_USERNAME }}/rag-demo:${{ github.sha }}
+      #     # Optionally tag with 'latest' for main branch
+      #     additional-tags: |
+      #       ${{ github.ref == 'refs/heads/main' && format('{0}/rag-demo:latest', secrets.DOCKERHUB_USERNAME) || '' }}
 
 #   deploy-to-azure:
 #     needs: build-and-push
