--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,9 +29,12 @@ dependencies = [
     "huggingface-hub (>=0.30.2,<0.31.0)",
     "pymupdf (>=1.25.5,<2.0.0)",
     "qdrant-client (<1.13.3)",
-    "cohere (>=5.15.0,<6.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
-    "pyyaml (>=6.0.2,<7.0.0)",      
+    "pyyaml (>=6.0.2,<7.0.0)",
+    "deepeval (>=3.1.3,<4.0.0)",
+    "langchain-cohere (>=0.4.4,<0.5.0)",
+    "datasets (>=3.6.0,<4.0.0)",
+    "ragas (>=0.2.15,<0.3.0)",      
 ]
 
 [tool.poetry]
