--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,14 +19,14 @@ authors = [
     {name = "pdemeulenaer",email = "pdemeulenaer@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.11,<4.0"
+requires-python = ">=3.11,<3.14"
 dependencies = [
     "python-dotenv (>=1.0.1,<2.0.0)",
     "langchain (>=0.3.20,<0.4.0)",
     "langchain-community (>=0.3.19,<0.4.0)",
     "langchain-groq (>=0.2.4,<0.3.0)",
     "streamlit (>=1.43.2,<2.0.0)",
-    "huggingface-hub (>=0.30.2,<0.31.0)",
+    "huggingface-hub (>=0.30.2,<0.33.0)",
     "pymupdf (>=1.25.5,<2.0.0)",
     "qdrant-client (<1.13.3)",
     "httpx (>=0.28.1,<0.29.0)",
@@ -34,7 +34,8 @@ dependencies = [
     "deepeval (>=3.1.3,<4.0.0)",
     "langchain-cohere (>=0.4.4,<0.5.0)",
     "datasets (>=3.6.0,<4.0.0)",
-    "ragas (>=0.2.15,<0.3.0)",      
+    "ragas (>=0.2.15,<0.3.0)",
+    "mineru (>=2.0.5,<3.0.0)",      
 ]
 
 [tool.poetry]
