--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,10 +29,10 @@ dependencies = [
     "huggingface-hub (>=0.30.2,<0.33.0)",
     "pymupdf (>=1.24.9,<1.25.0)", # (>=1.25.5,<2.0.0)
     "qdrant-client (<1.13.3)",
-    "httpx (>=0.28.1,<0.29.0)",
+    "httpx (>=0.23.0,<0.29.0)",
     "pyyaml (>=6.0.2,<7.0.0)",
-    "deepeval (>=3.1.3,<4.0.0)",
-    "langchain-cohere (>=0.4.4,<0.5.0)",
+    # "deepeval (>=3.1.3,<4.0.0)",
+    # "langchain-cohere (>=0.4.4,<0.5.0)",
     "datasets (>=3.6.0,<4.0.0)",
     "ragas (>=0.2.15,<0.3.0)",
     # "mineru (>=2.0.5,<3.0.0)",
@@ -41,6 +41,15 @@ dependencies = [
     "opencv-python (>=4.10.0,<5.0.0)",
     "opencv-python-headless (>=4.10.0,<5.0.0)",
     "groq (>=0.28.0,<0.29.0)",
+    # "papermage[dev,predictors,visualizers] (>=0.20.0,<1.0.0)",
+    # "papermage @ git+https://github.com/allenai/papermage.git",
+    # "papermage (>=0.20.0,<1.0.0)",
+    # "smashed (>=0.21.5,<0.22.0)",
+    # "layoutparser (>=0.3.4,<0.4.0)",
+    # "pysbd (>=0.3.4,<0.4.0)",
+    # "vila (>=0.5.0,<0.6.0)",
+    # "grobid-client (>=0.8.8,<0.9.0)",
+    "grobid-client-python @ git+https://github.com/kermitt2/grobid-client-python.git"
 ]
 
 [tool.poetry]
